refs #7229 - fix references dialog being too long.

--- a/docroot/themes/iucn_backend/css/style.css
+++ b/docroot/themes/iucn_backend/css/style.css
@@ -387,6 +387,10 @@
 .node-site-assessment-state-change-form .field--name-field-references-reviewer .form-item.form-disabled {
   display: none;
 }
+.add-paragraph-form-modal,
+.edit-paragraph-form-modal {
+  top: 10% !important;
+}
 .add-paragraph-form-modal .paragraph-form,
 .edit-paragraph-form-modal .paragraph-form {
   width: 100%;
