--- a/docroot/themes/iucn_backend/less/components/assessment/form.less
+++ b/docroot/themes/iucn_backend/less/components/assessment/form.less
@@ -162,6 +162,11 @@
   }
 }
 
+.add-paragraph-form-modal,
+.edit-paragraph-form-modal {
+  top: 10% !important;
+}
+
 .add-paragraph-form-modal .paragraph-form,
 .edit-paragraph-form-modal .paragraph-form {
   width: 100%;
